eval_outputs/diff_only/code_change_and_test_change/fourth/google/instruction.log
=== RETURN CODE: 1 ===

=== STDOUT ===
SyntaxError: /Users/johndennehy/Documents/Coding/devops-atu-disruptive-devops-assignment/app/e2e/instruction.spec.ts: Unexpected token (1:0)

> 1 | ### Test Description:
    | ^
  2 |
  3 | This test verifies the functionality of the tag filter on the Home page. It checks that the filter correctly displays only notes that contain the specified tag, handles non-existent tags by showing a "No notes match the filter" message, and resets the display to all notes when the filter is cleared.
  4 |

   at instruction.spec.ts:1

> 1 | ### Test Description:
  2 |
  3 | This test verifies the functionality of the tag filter on the Home page. It checks that the filter correctly displays only notes that contain the specified tag, handles non-existent tags by showing a "No notes match the filter" message, and resets the display to all notes when the filter is cleared.
  4 |

Error: No tests found.
Make sure that arguments are regular expressions matching test files.
You may need to escape symbols like "$" or "*" and quote the arguments.

[1A[2K

=== STDERR ===

